# ci_cd_test

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
cmake/: FirstCMakeConfig.h.in  FirstOrganizedCMakeConfig.cmake.in  FirstOrganizedCMakeConfig.h.in
include/log_lib/: print_log.h
mains/: CMakeLists.txt  hello.cpp
src/log_lib/: CMakeLists.txt  print_log.cpp
tests/: CMakeLists.txt  test_hello.cpp  test_version.cpp
tests - Copie/: CMakeLists.txt
